# gl

./: .gitignore  README.md  generate_fixtures.py  main.py  pyproject.toml
data/: invoices.json  purchase_orders.json  sop.md
eval/: expected.py  feedback.py  report.py  runner.py
specs/: AGENT_DESIGN.md  DESIGN.md  PHASE1_DATA_FOUNDATION.md  PHASE2_CORE_PIPELINE.md  PHASE3_EVAL_SHADOW_FEEDBACK.md  PHASE4_CLI_HITL_POLISH.md  QA_AND_COMPLIANCE_REVIEW.md  REQS.md
src/: agent.py  chart_of_accounts.py  engine.py  fixtures.py  models.py  prompts.py  store.py  tools.py
src/pipeline/: approver.py  classifier.py  po_matcher.py  poster.py  recognition.py
tests/: test_agent.py  test_approver.py  test_classifier.py  test_e2e.py  test_eval.py  test_models.py  test_po_matcher.py  test_poster.py  test_recognition.py  test_tools.py
